# soli

./: CMakeLists.txt  README.md  Toolchain-mingw.cmake
cmake/: FindVala.cmake  UseVala.cmake
data/: sol.lang  test.txt
src/: config.vala  main-ui.vala  main.vala  string-utils.vala  test.vala
src/language/: binding-class.vala  class-provider.vala  class.vala  custom-class.vala  element.vala  function.vala  memory.vala  null-class.vala  object.vala  operator.vala  struct.vala  var.vala
src/parser/: parser.vala  tokenizer.vala
